[package]
name = "rustplay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list-pg-db"
path = "src/bin/list-pg-db.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[dependencies]
postgres = "0.19.5"
hyper = { version = "1.1.0", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
http-body-util = "0.1"
axum = "0.7.4"
hyper-util =  { version = "0.1.0", features = ["full"] }
clap = { version = "4.3.2", features = ["derive"]}
serde = { version = "1.0.195", features = ["derive"]}

[profile.release]
debug = true